Fixed button layout issue

--- a/QuizExperiment.Admin/Client/wwwroot/css/app.css
+++ b/QuizExperiment.Admin/Client/wwwroot/css/app.css
@@ -1026,7 +1026,7 @@ nav.title-bar {
         width: 280px;
         height: 100px;
         border-radius: 100px;
-        font-size: 48pt;
+        font-size: 36pt;
         font-weight: bolder;
         border: none;
     }
